--- a/index.html
+++ b/index.html
@@ -20,154 +20,144 @@
 
 <style>
 
-/* Navbar with gradient background */
-
+/* --- INTERACTIVE NAVBAR (Keeping Original Colors) --- */
 .header {
-
-  background: linear-gradient(90deg, #007bff, #00aaff); /* HexRide gradient blue */
-
+  background: linear-gradient(90deg, #007bff, #00aaff);
   border-bottom: 2px solid #0056b3;
-
   position: sticky;
-
   top: 0;
-
   z-index: 1000;
-
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-
-  transition: background 0.3s, box-shadow 0.3s;
-
+  padding: 0 5%;
 }
 
-
-
-.header:hover {
-
-  box-shadow: 0 6px 12px rgba(0,0,0,0.15);
-
+.nav-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 70px;
 }
-
-
 
 .logo {
-
   color: #fff;
-
   font-weight: bold;
-
-  font-size: 22px;
-
-  text-decoration: none; /* Removes the underline */
-
-  display: flex;         /* Keeps image and text aligned */
-
+  font-size: 24px;
+  text-decoration: none;
+  display: flex;
   align-items: center;
-
-  gap: 10px;            /* Adds a little space between logo and text */
-
+  gap: 10px;
+  transition: transform 0.3s ease;
 }
 
+.logo:hover { transform: scale(1.05); }
 
-
-/* Optional: Subtle hover effect for the logo */
-
-.logo:hover {
-
-  opacity: 0.9;
-
+.nav ul {
+  display: flex;
+  gap: 25px;
+  list-style: none;
 }
-
-
 
 .nav a {
-
   color: #fff;
-
   font-weight: 500;
-
-  transition: color 0.3s, transform 0.2s;
-
+  text-decoration: none;
+  position: relative;
+  padding: 5px 0;
+  transition: color 0.3s;
 }
 
-
-
-.nav a:hover,
-
-.nav a.active {
-
-  color: #ffd700; /* Gold on hover or active */
-
-  transform: scale(1.1);
-
+/* Hover Underline Animation */
+.nav a::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #ffd700; /* Gold */
+  transition: width 0.3s ease;
 }
 
-
-
-/* Mobile menu button */
-
-.menu-btn {
-
-  color: #fff;
-
-  font-size: 26px;
-
+.nav a:hover::after, .nav a.active::after {
+  width: 100%;
 }
 
+/* --- INTERACTIVE PRODUCT CARDS --- */
+.product-card {
+  background: #fff;
+  border-radius: 12px;
+  padding: 20px;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  cursor: pointer;
+  border: 1px solid #eee;
+}
 
+/* Hover Effect: Card Lifts and Shadow Deepens */
+.product-card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 15px 30px rgba(0, 123, 255, 0.15);
+  border-color: #007bff;
+}
 
-/* Mobile responsive menu */
+/* Image Zoom Effect */
+.product-card img {
+  transition: transform 0.5s ease;
+  border-radius: 8px;
+}
+
+.product-card:hover img {
+  transform: scale(1.08);
+}
+
+.product-card h3 {
+  margin-top: 15px;
+  color: #333;
+  transition: color 0.3s;
+}
+
+.product-card:hover h3 {
+  color: #007bff; /* Title turns blue on hover */
+}
+
+/* Mobile Nav Toggle */
+.nav.active { display: flex !important; }
 
 @media (max-width: 768px) {
-
-  .nav ul {
-
-    position: absolute;
-
-    top: 60px;
-
-    right: 10px;
-
-    background: linear-gradient(180deg, #007bff, #00aaff);
-
-    flex-direction: column;
-
-    width: 200px;
-
-    padding: 10px;
-
-    border: 1px solid #0056b3;
-
+  .menu-btn { display: block; cursor: pointer; }
+  .nav {
     display: none;
-
-    border-radius: 5px;
-
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-
+    position: absolute;
+    top: 70px;
+    right: 0;
+    background: #007bff;
+    width: 200px;
+    flex-direction: column;
+    padding: 20px;
   }
-
-
-
-  .nav ul.show {
-
-    display: block;
-
-  }
-
-
-
-  .nav a {
-
-    padding: 8px 0;
-
-  }
-
+  .nav ul { flex-direction: column; gap: 15px; }
 }
 
+/* Styling for when the user scrolls down */
+.header.scrolled {
+  background: rgba(0, 86, 179, 0.95); /* A slightly darker, solid blue */
+  height: 60px; /* Shrinks the navbar slightly for more screen space */
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+/* Adjust the container height during scroll for a smooth transition */
+.header.scrolled .nav-container {
+  height: 60px;
+}
+
+/* Optional: Make the logo slightly smaller when scrolled */
+.header.scrolled .logo {
+  font-size: 20px;
+}  
+
 </style>
-
-
-
 
 
 </head>
@@ -177,33 +167,21 @@
 <body>
 
 <header class="header">
+  <div class="nav-container">
+    <a href="index.html" class="logo">
+      <img src="img/hexride.png" width="40" alt="HexRide Logo"> HexRide
+    </a>
 
-  <a href="index.html" class="logo">
-
-    <img src="img/hexride.png" width="40" alt="HexRide Logo"> HexRide
-
-  </a>
-
-
-
-  <nav class="nav">
-
-    <ul>
-
-      <li><a href="index.html" class="active">Home</a></li>
-
-      <li><a href="products.html">Products</a></li>
-
-      <li><a href="about.html">About</a></li>
-
-      <li><a href="contact.html">Contact</a></li>
-
-    </ul>
-
-  </nav>
-
-  <div class="menu-btn" onclick="toggleMenu()">☰</div>
-
+    <nav class="nav" id="navbar">
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="menu-btn" onclick="toggleMenu()" style="color:white; font-size:26px;">☰</div>
+  </div>
 </header>
 
 
@@ -875,9 +853,7 @@ function scrollToTop() {
 <script>
 
 function toggleMenu() {
-
-  document.querySelector(".nav ul").classList.toggle("show");
-
+  document.getElementById("navbar").classList.toggle("active");
 }
 
 document.getElementById("year").textContent = new Date().getFullYear();
@@ -1148,6 +1124,20 @@ setInterval(showNotification, 12000); // 12 seconds
 
 setTimeout(showNotification, 3000);
 
+
+  
+  
+  window.addEventListener('scroll', function() {
+  const header = document.querySelector('.header');
+  
+  // If the user scrolls more than 50px, add the 'scrolled' class
+  if (window.scrollY > 50) {
+    header.classList.add('scrolled');
+  } else {
+    header.classList.remove('scrolled');
+  }
+});  
+
 </script>
 
 
@@ -1231,6 +1221,7 @@ setTimeout(showNotification, 3000);
 </body>
 
 </html>
+
 
 
 
